--- a/index.html
+++ b/index.html
@@ -29,56 +29,56 @@
     <section class="container">
         <div class="cards">
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg.png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg.png" alt="Germany">
                 <h1>Germany</h1>
                 <p>Population: 81,770,900</p>
                 <p>Region: Europe</p>
                 <p>Capital: Berlin</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (1).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (1).png" alt="Usa">
                 <h1>United States of Amerika</h1>
                 <p>Population: 323,947,000</p>
                 <p>Region: Americas</p>
                 <p>Capital: Washington, D.C.</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (2).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (2).png" alt="Brazil">
                 <h1>Brazil</h1>
                 <p>Population: 206,135,893</p>
                 <p>Region: Americas</p>
                 <p>Capital: Brasília</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (3).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (3).png" alt="Iceland">
                 <h1>Iceland</h1>
                 <p>Population: 334,300</p>
                 <p>Region: Europe</p>
                 <p>Capital: Reykjavík</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (4).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (4).png" alt="Afganistan">
                 <h1>Afganistan</h1>
                 <p>Population: 27,657,145</p>
                 <p>Region: Asia</p>
                 <p>Capital: Kabul</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (5).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (5).png" alt="Aland Islandds">
                 <h1>Aland Islands</h1>
                 <p>Population: 28,875</p>
                 <p>Region: Europe</p>
                 <p>Capital: Mariehamn</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (6).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (6).png" alt="Albania">
                 <h1>Albania</h1>
                 <p>Population: 2,886,026</p>
                 <p>Region: Europe</p>
                 <p>Capital: Tirana</p>
             </div>
             <div class="card">
-                <img src="/1280px-Flag_of_Germany.svg (7).png" alt="">
+                <img src="/1280px-Flag_of_Germany.svg (7).png" alt="Algeria">
                 <h1>Algeria</h1>
                 <p>Population: 40,400,000</p>
                 <p>Region: Africa</p>
